--- a/src/main/resources/com/example/vos/dashBoard.fxml
+++ b/src/main/resources/com/example/vos/dashBoard.fxml
@@ -1,124 +1,192 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1600.0" style="-fx-background-color: #fff;" stylesheets="@../../../assets/global.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.vos.DashBoardController">
+<AnchorPane fx:id="parentPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#getWindowOffset" onMouseDragEntered="#moveWindow" prefHeight="900.0" prefWidth="1600.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.vos.DashBoardController">
    <children>
-      <AnchorPane fx:id="navigationPane" prefHeight="900.0" prefWidth="50.0" style="-fx-background-color: #f5f5fa;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane fx:id="navigationPane" prefHeight="900.0" prefWidth="50.0" style="-fx-background-color: #fff;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <VBox alignment="TOP_CENTER" layoutX="-25.0" layoutY="59.0" prefHeight="841.0" prefWidth="57.0" spacing="15.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="59.0">
+            <VBox alignment="TOP_CENTER" layoutX="-25.0" layoutY="59.0" prefHeight="841.0" prefWidth="57.0" spacing="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="60.0">
                <children>
-                  <ImageView fitHeight="30.0" fitWidth="30.0" onMouseClicked="#loadChatContent">
-                     <image>
-                        <Image url="@icons/chat.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="16.0" layoutY="10.0" onMouseClicked="#loadAdminContent">
-                     <image>
-                        <Image url="@icons/group.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="16.0" layoutY="55.0" onMouseClicked="#loadAccountingContent">
-                     <image>
-                        <Image url="@icons/diagram.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="16.0" layoutY="131.0" onMouseClicked="#loadIOpsContent">
-                     <image>
-                        <Image url="@icons/warehouse.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="16.0" layoutY="192.0" onMouseClicked="#loadEOpsContent">
-                     <image>
-                        <Image url="@icons/target.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="16.0" layoutY="253.0" onMouseClicked="#loadFSContent">
-                     <image>
-                        <Image url="@icons/pie-chart.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="16.0" layoutY="313.0" onMouseClicked="#loadCalendarContent">
-                     <image>
-                        <Image url="@icons/calendar.png" />
-                     </image>
-                  </ImageView>
-               </children>
-            </VBox>
-            <VBox alignment="BOTTOM_CENTER" prefHeight="900.0" prefWidth="57.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <children>
-                  <ImageView fx:id="logoutButton" fitHeight="30.0" fitWidth="30.0" onMouseClicked="#handleLogout">
-                     <image>
-                        <Image url="@icons/logout.png" />
-                     </image>
-                     <VBox.margin>
-                        <Insets bottom="10.0" />
-                     </VBox.margin>
-                     <viewport>
-                        <Rectangle2D />
-                     </viewport>
-                  </ImageView>
-
+                  <VBox alignment="CENTER" onMouseClicked="#loadChatContent">
+                     <children>
+                        <ImageView fitHeight="25.0" fitWidth="25.0">
+                           <image>
+                              <Image url="@assets/icons/chat.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                     <padding>
+                        <Insets bottom="5.0" top="5.0" />
+                     </padding>
+                  </VBox>
+                  <VBox alignment="CENTER" onMouseClicked="#loadAdminContent">
+                     <children>
+                        <ImageView fitHeight="25.0" fitWidth="25.0">
+                           <image>
+                              <Image url="@assets/icons/group.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                     <padding>
+                        <Insets bottom="5.0" top="5.0" />
+                     </padding>
+                  </VBox>
+                  <VBox alignment="CENTER" onMouseClicked="#loadAccountingContent">
+                     <children>
+                        <ImageView fitHeight="25.0" fitWidth="25.0">
+                           <image>
+                              <Image url="@assets/icons/diagram.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                     <padding>
+                        <Insets bottom="5.0" top="5.0" />
+                     </padding>
+                  </VBox>
+                  <VBox alignment="CENTER" onMouseClicked="#loadIOpsContent">
+                     <children>
+                        <ImageView fitHeight="25.0" fitWidth="25.0">
+                           <image>
+                              <Image url="@assets/icons/warehouse.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                     <padding>
+                        <Insets bottom="5.0" top="5.0" />
+                     </padding>
+                  </VBox>
+                  <VBox alignment="CENTER" onMouseClicked="#loadEOpsContent">
+                     <children>
+                        <ImageView fitHeight="25.0" fitWidth="25.0">
+                           <image>
+                              <Image url="@assets/icons/target.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                     <padding>
+                        <Insets bottom="5.0" top="5.0" />
+                     </padding>
+                  </VBox>
+                  <VBox alignment="CENTER" onMouseClicked="#loadFSContent">
+                     <children>
+                        <ImageView fitHeight="25.0" fitWidth="25.0">
+                           <image>
+                              <Image url="@assets/icons/pie-chart.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                     <padding>
+                        <Insets bottom="5.0" top="5.0" />
+                     </padding>
+                  </VBox>
+                  <VBox alignment="CENTER" onMouseClicked="#loadCalendarContent">
+                     <children>
+                        <ImageView fitHeight="25.0" fitWidth="25.0">
+                           <image>
+                              <Image url="@assets/icons/calendar.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                     <padding>
+                        <Insets bottom="5.0" top="5.0" />
+                     </padding>
+                  </VBox>
+                  <VBox alignment="BOTTOM_CENTER" onMouseClicked="#handleLogout">
+                     <children>
+                        <ImageView fx:id="logoutButton" fitHeight="25.0" fitWidth="25.0">
+                           <image>
+                              <Image url="@assets/icons/logout.png" />
+                           </image>
+                           <viewport>
+                              <Rectangle2D />
+                           </viewport>
+                        </ImageView>
+                     </children>
+                     <padding>
+                        <Insets bottom="5.0" top="5.0" />
+                     </padding>
+                  </VBox>
                </children>
             </VBox>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="headerPane" prefHeight="50.0" prefWidth="600.0" style="-fx-background-color: #f5f5fa;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane fx:id="headerPane" onMouseClicked="#getWindowOffset" onMouseDragged="#moveWindow" prefHeight="50.0" prefWidth="600.0" style="-fx-background-color: #fff;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox alignment="CENTER_LEFT" layoutX="48.0" prefHeight="50.0" prefWidth="1552.0" AnchorPane.leftAnchor="3.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
                <children>
-                  <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="vosIcon" fitHeight="50.0" fitWidth="50.0" onMouseClicked="#getWindowOffset" onMouseDragged="#moveWindow" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@icons/vos.png" />
+                        <Image url="@assets/icons/vos.png" />
                      </image>
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
                   </ImageView>
-                  <Label prefHeight="28.0" prefWidth="247.0" style="-fx-text-fill: #494949;" text="Vertex Online System" textFill="#2b2b2b">
+                  <Label prefHeight="28.0" prefWidth="180.0" style="-fx-text-fill: linear-gradient(to right, #155d99, #5A90CF); -fx-font-weight: bold; -fx-font-size: 16px;" text="Vertex Online System" textFill="#2b2b2b">
                      <font>
                         <Font size="21.0" />
                      </font>
-                     <styleClass>
-                        <String fx:value="text" />
-                        <String fx:value="text-title-logo" />
-                     </styleClass>
                      <HBox.margin>
                         <Insets left="5.0" />
                      </HBox.margin>
                   </Label>
-                  <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="545.0" styleClass="text">
+                  <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="518.0" styleClass="text">
                      <children>
-                        <TextField prefHeight="45.0" prefWidth="487.0" promptText="Search" style="-fx-background-color: #fff; -fx-background-radius: 20;">
+                        <TextField fx:id="searchBar" prefHeight="45.0" prefWidth="487.0" promptText="Search" style="-fx-background-color: #f0f0f0; -fx-background-radius: 20;">
                            <font>
                               <Font size="15.0" />
                            </font>
                            <HBox.margin>
-                              <Insets bottom="5.0" left="20.0" right="20.0" />
+                              <Insets bottom="10.0" top="3.0" />
                            </HBox.margin>
                            <padding>
-                              <Insets bottom="8.0" left="50.0" right="5.0" top="8.0" />
+                              <Insets bottom="8.0" left="20.0" right="5.0" top="8.0" />
                            </padding>
                         </TextField>
+                        <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" translateX="-35.0">
+                           <image>
+                              <Image url="@assets/icons/search.png" />
+                           </image>
+                           <HBox.margin>
+                              <Insets bottom="8.0" />
+                           </HBox.margin>
+                        </ImageView>
                      </children>
                   </HBox>
                </children>
             </HBox>
-            <HBox alignment="CENTER_RIGHT" layoutX="10.0" layoutY="10.0" prefHeight="55.0" prefWidth="473.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="contentPane" layoutX="65.0" layoutY="59.0" prefHeight="841.0" prefWidth="1544.0" style="-fx-background-color: #f0f0f0; -fx-background-radius: 20px 0px 0px 0px; -fx-border-radius: 20px 0px 0px 0px;" stylesheets="@assets/colors.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="56.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="56.0">
+         <effect>
+            <InnerShadow>
+               <color>
+                  <Color red="0.6491228342056274" green="0.6491228342056274" blue="0.6491228342056274" />
+               </color>
+            </InnerShadow>
+         </effect>
+      </AnchorPane>
+      <HBox layoutX="1092.6666259765625" layoutY="824.6666870117188" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="0.0">
+         <children>
+            <HBox fx:id="profileBox" alignment="CENTER_RIGHT" onMouseEntered="#showProfile" onMouseExited="#hideProfile" prefHeight="55.0" prefWidth="507.0">
                <children>
-                  <VBox alignment="CENTER_RIGHT" prefHeight="55.0" prefWidth="283.0">
+                  <VBox fx:id="employeeDescription" alignment="CENTER_RIGHT" prefHeight="55.0" prefWidth="283.0">
                      <children>
-                        <Label fx:id="nameText" styleClass="text" text="Juan Dela Cruz" textFill="#2b2b2b">
+                        <Label fx:id="nameText" style="-fx-font-weight: 700;" styleClass="text" text="Juan Dela Cruz" textFill="#2b2b2b">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -130,18 +198,37 @@
                         </Label>
                      </children>
                   </VBox>
-                  <ImageView fitHeight="50.0" fitWidth="50.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="employeeProfile" fitHeight="50.0" fitWidth="50.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@icons/profile.png" />
+                        <Image url="@assets/icons/profile.png" />
                      </image>
                      <HBox.margin>
-                        <Insets right="5.0" />
+                        <Insets right="15.0" />
                      </HBox.margin>
                   </ImageView>
                </children>
             </HBox>
          </children>
-      </AnchorPane>
-      <AnchorPane fx:id="contentPane" layoutX="57.0" layoutY="55.0" prefHeight="841.0" prefWidth="1523.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      </HBox>
+      <ImageView fx:id="minimizeButton" fitHeight="25.0" fitWidth="25.0" layoutX="1508.3333740234375" layoutY="5.0" onMouseClicked="#minimizeButton" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="65.0" AnchorPane.topAnchor="5.0">
+         <image>
+            <Image url="@assets/icons/close.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="maximizeButton" fitHeight="25.0" fitWidth="25.0" layoutX="1539.0" layoutY="5.0" onMouseClicked="#maximizeButton" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="5.0">
+         <image>
+            <Image url="@assets/icons/maximize.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="closeButton" fitHeight="25.0" fitWidth="25.0" layoutX="1569.6666259765625" layoutY="5.0" onMouseClicked="#closeButton" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+         <image>
+            <Image url="@assets/icons/remove.png" />
+         </image>
+      </ImageView>
+      <Rectangle arcHeight="10.0" arcWidth="20.0" fill="DODGERBLUE" height="50.0" onMouseClicked="#showProfile" onMouseEntered="#showProfile" onMouseExited="#hideProfile" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" style="-fx-fill: #155d99;" width="10.0" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="0.0" />
    </children>
+   <stylesheets>
+      <URL value="@assets/global.css" />
+      <URL value="@assets/colors.css" />
+   </stylesheets>
 </AnchorPane>
